# pyHSICLassoSelector

./: .gitignore  README.md  pyproject.toml
src/hsic_lasso_selector/: __init__.py  _selector.py
tests/: conftest.py  test_selector.py
